--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#1E4A55</color>
+    <color name="yellow">#ffdd3a</color>
+    <color name="light_blue">#1ACBCC</color>
 </resources>
