--- a/app/src/main/res/layout/activity_summer_fruits.xml
+++ b/app/src/main/res/layout/activity_summer_fruits.xml
@@ -19,8 +19,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/summer_fruits_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="45dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/summer_fruits_base_include" />
