--- a/app/src/main/res/layout/activity_account_screen.xml
+++ b/app/src/main/res/layout/activity_account_screen.xml
@@ -4,37 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_sign_up"
-    tools:context=".ui.SignUpScreen">
+    android:background="@drawable/bg_home"
+    tools:context=".ui.AccountScreen">
 
-    <ImageView
-        android:id="@+id/sign_up_iv_back"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="4dp"
-        android:src="@drawable/ic_back_sign_up"
+    <include
+        layout="@layout/base_menu"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <ImageView
+        android:id="@+id/iv_logo_splash"
         android:layout_width="wrap_content"
+        android:layout_height="450dp"
+        android:layout_marginBottom="420dp"
+        android:src="@drawable/ic_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginTop="248dp"
         android:gravity="center"
-        android:text="@string/sign_up_word_str"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/sign_up_iv_back"
+        android:text="@string/healthy_mall_in_your_hand"
+        android:textColor="@color/yellow"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+
     <EditText
-        android:id="@+id/sign_up_edittext_full_name"
+        android:id="@+id/account_edittext_full_name"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_margin="12dp"
-        android:background="@drawable/edit_text_shape_sign_up"
+        android:background="@drawable/edit_text_shape_account"
         android:hint="@string/full_name_hint_str"
         android:inputType="textPersonName"
         android:letterSpacing="0.1"
@@ -45,18 +58,18 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.360"
+        app:layout_constraintVertical_bias="0.410"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/sign_up_edittext_phone"
+        android:id="@+id/account_edittext_phone"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_margin="12dp"
-        android:background="@drawable/edit_text_shape_sign_up"
+        android:background="@drawable/edit_text_shape_account"
         android:hint="@string/phone_hint_str"
         android:inputType="phone"
         android:letterSpacing="0.1"
@@ -67,18 +80,19 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.450"
+        app:layout_constraintVertical_bias="0.500"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
+
     <EditText
-        android:id="@+id/sign_up_edittext_email"
+        android:id="@+id/account_edittext_email"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_margin="12dp"
-        android:background="@drawable/edit_text_shape_sign_up"
+        android:background="@drawable/edit_text_shape_account"
         android:hint="@string/email_hint_str"
         android:inputType="textEmailAddress"
         android:letterSpacing="0.1"
@@ -89,19 +103,18 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.540"
+        app:layout_constraintVertical_bias="0.590"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
-
     <EditText
-        android:id="@+id/sign_up_edittext_password"
+        android:id="@+id/account_edittext_password"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_margin="12dp"
-        android:background="@drawable/edit_text_shape_sign_up"
+        android:background="@drawable/edit_text_shape_account"
         android:hint="@string/password_hint_str"
         android:inputType="textPassword"
         android:letterSpacing="0.1"
@@ -112,68 +125,56 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.500"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.630"
+        app:layout_constraintVertical_bias="0.680"
         tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
-
     <RadioGroup
-        android:id="@+id/sign_up_radio_group"
+        android:id="@+id/account_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_edittext_password">
+        app:layout_constraintTop_toBottomOf="@+id/account_edittext_password">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="100dp"
             android:text="@string/cash_str"
             android:theme="@style/Theme.LemoMall2"
-            android:layout_marginStart="80dp"
-            android:textSize="22sp"
-             />
+            android:textSize="22sp" />
 
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/visa_str"
-            android:textSize="22sp"
+            android:layout_marginStart="20dp"
             android:checked="false"
             android:theme="@style/Theme.LemoMall2"
-            android:layout_marginStart="20dp"
-             />
+            android:text="@string/visa_str"
+            android:textSize="22sp" />
 
 
     </RadioGroup>
 
 
-    <ImageView
-        android:id="@+id/sign_up_imageview"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/ic_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.383"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_radio_group" />
-
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/account_save_textview"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="44dp"
+        android:drawableLeft="@drawable/ic_save"
+        android:text="@string/save_str"
+        android:drawablePadding="10dp"
         android:gravity="center"
-        android:textSize="20sp"
-        android:text="@string/clever_mind_str"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/account_radio_group" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
