--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,15 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#ffdd3a</color>
+    <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_blue">#1E4A55</color>
-    <color name="yellow">#ffdd3a</color>
+    <color name="yellow">#FFDD3A</color>
+    <color name="light_yellow">#FFEB3B</color>
     <color name="light_blue">#1ACBCC</color>
     <color name="light_white">#e9f3f4</color>
+    <color name="orange">#FFAF2A</color>
+    <color name="brown">#352100</color>
 </resources>
