--- a/app/src/main/res/layout/activity_basket_screen.xml
+++ b/app/src/main/res/layout/activity_basket_screen.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:text="@string/app_name"
+        android:text="0 JD"
         android:textSize="25sp"
         android:textColor="@color/dark_blue"
         android:gravity="center"
