--- a/app/src/main/res/layout/activity_account_screen.xml
+++ b/app/src/main/res/layout/activity_account_screen.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.AccountScreen">
 
     <include
+        android:id="@+id/include2"
         layout="@layout/base_menu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,29 +18,27 @@
         android:id="@+id/iv_logo_splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="456dp"
+        android:layout_marginTop="5dp"
         android:src="@drawable/ic_logo_account"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include2"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
         android:text="@string/healthy_mall_in_your_hand"
         android:textColor="@color/light_blue"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_splash"/>
 
 
     <EditText
